--- a/style.css
+++ b/style.css
@@ -56,10 +56,16 @@ body {
 
 .card {
   flex-grow: 1;
+  position: relative;
 }
 
 .card-img-top {
   width: 100%;
-  height: 15vh;
   object-fit: contain;
+  height: 30vh;
+}
+
+.price{
+  position: absolute;
+  bottom: 0;
 }
